# agentic_CL_builder

./: .gitignore  README.md  agentic_cl_builder.py  development.ipynb  main.py  pyproject.toml  requirements.txt
personal_context/: context_SAMPLE.md
personal_context/samples/: sample_cover_letter_SAMPLE.txt
