[project]
name = "agentic-cl-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.8.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.5",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.10",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.8",
    "langsmith>=0.7.4",
    "markdown-pdf>=1.13.1",
    "mcp>=1.26.0",
    "pypdf>=6.7.4",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.3",
    "tavily-python>=0.7.22",
]


[tool.pyright]
venvPath = "."
venv = ".venv"
